# ts-plugins-

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/plugin-e2e-harness/: Cargo.toml
crates/plugin-e2e-harness/src/: lib.rs
crates/plugin-e2e-harness/tests/: e2e_calc.rs  e2e_crud.rs  e2e_http.rs  e2e_quote.rs  e2e_rust_caller.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: activation.rs  circuit_breaker.rs  client.rs  dynamic.rs  health.rs  lib.rs  registry.rs  runtime_handle.rs  scheduler.rs  supervisor.rs  unix_socket.rs
crates/plugin-host/tests/: activation.rs  client.rs  kv_config.rs  manifest_loading.rs  scheduled_host.rs  supervisor.rs  unix_socket_transport.rs
crates/plugin-kv/: Cargo.toml
crates/plugin-kv/src/: config.rs  lib.rs  memory.rs  redis.rs
crates/plugin-observability/: Cargo.toml
crates/plugin-observability/src/: lib.rs  logs.rs  metrics.rs  tracing.rs
crates/plugin-protocol/: Cargo.toml
crates/plugin-protocol/src/: control.rs  envelope.rs  framing.rs  lib.rs
crates/plugin-protocol/tests/: framing.rs
descriptors/: contracts.binpb
docs/: commenting-standard.md  operations.md
docs/references/: runtime-borrowed-patterns.md
docs/site/: index.md  package.json
docs/site/.vitepress/: config.ts
docs/site/architecture/: contracts-and-codegen.md  runtime-and-host-flow.md  (+2 more)
examples/calculation-plugin/: package.json  plugin.json
examples/crud-plugin/: package.json  plugin.json
examples/http-plugin/: package.json  plugin.json  tsconfig.json
examples/quote-plugin/: package.json  plugin.json
examples/rust-caller/: Cargo.toml
(+30 files in other folders)
