[package]
name = "plugin-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1.10.1"
plugin-protocol = { path = "../plugin-protocol" }
prost = "0.14.1"
tokio = { version = "1.51.0", features = ["process"] }
