[package]
name = "plugin-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1.10.1"
plugin-observability = { path = "../plugin-observability" }
plugin-kv = { path = "../plugin-kv" }
plugin-protocol = { path = "../plugin-protocol" }
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.51.0", features = ["process"] }

[dev-dependencies]
opentelemetry = { version = "0.29.1", features = ["trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = "0.3.19"
